      "home" with the coming removal of hardening-wrapper and
      hardening-includes.
    + [JW] Remove the hardening-no-stackprotector tag.
  * checks/debhelper.pm:
    + [JW] Ignore comments in debian/rules.
    + [JW] Fix parsing rule targets in lines containing multiple colons.
      Thanks to Andreas Beckmann for the bug report.  (Closes: #838246)
  * checks/fields.desc:
    + [JW] Fix typo.
  * checks/testsuite.pm:
    + [JW] Apply patch from Sean Whitton to recognise autopkgtest-pkg-elpa
      as a valid value for the Testsuite field.  (Closes: #837801)

  * collection/hardening-info:
    + [NT] Removed.

  * data/files/js-libraries:
    + [BR] Apply patch from Jean-Michel Vourgère to add detection of
      libjs-jquery-migrate-1.  (Closes: #823627)
  * data/files/php-libraries:
    + [JW] Apply patch from Marcelo Jorge Vieira to update package name
      for php-gettext.  (Closes: #837502)
  * data/spelling/corrections:
    + [JW, PW] Add more corrections.

  * debian/control:
    + [NT] Drop dependencies on hardening-includes as we no longer need
      hardening-check.
  * debian/copyright:
    + [JW] Add Paul Wise.
    + [JW] Remove now-unneeded separate entry for spellintian.t.
    + [JW] Update copyright years.

  * helpers/coll/hardening-info-helper:
    + [NT] Removed.
  * helpers/coll/objdump-info-helper:
    + [NT] Expose a few more bits from readelf needed to implement some
      of the hardening checks.

  * lib/Lintian/Collect/Binary.pm:
    + [NT] Expose a few more bits from readelf needed to implement some
      of the hardening checks.

  * profiles/debian/extra-hardening.profile:
    + [NT] Removed - we no longer support the stackprotector tag.
  * profiles/debian/ftp-master-auto-reject.profile:
    + [JW] Refresh against current rule set.
  * profiles/debian/main.profile:
    + [JW] Stop disabling the hardening-no-stackprotector tag.

  * t/scripts/spellintian.t:
    + [JW] Relicense as GPLv2+, like the rest of Lintian.
